--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@next/env": "^15.1.3",
     "@prisma/client": "^6.1.0",
     "@radix-ui/react-slot": "^1.1.1",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "motion": "^11.15.0",
     "next": "15.1.3",
     "next-auth": "^5.0.0-beta.25",
+    "openai": "^4.77.0",
     "prisma": "^6.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
